--- a/NeuralNetworks (3) (1).ipynb
+++ b/NeuralNetworks (3) (1).ipynb
@@ -6,7 +6,7 @@
     "id": "9chEEiNSzkL0"
    },
    "source": [
-    "# NEURAL NETWORK AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHHHH"
+    "# NEURAL NETWORK "
    ]
   },
   {
